Move gitlab and registry to ovh-gw01

--- a/host_vars/ovh-gw01/nginx/vhosts.yml
+++ b/host_vars/ovh-gw01/nginx/vhosts.yml
@@ -4,3 +4,9 @@ nginx_vhosts:
   - filename: netmaker.conf
     server_name: netmaker
     template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/netmaker.conf.j2"
+  - filename: gitlab.conf
+    server_name: gitlab
+    template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/gitlab.conf.j2"
+  - filename: registry.conf
+    server_name: registry
+    template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/registry.conf.j2"
