Add smtp config to servers groupvars

--- a/host_vars/dresrv/vars.yml
+++ b/host_vars/dresrv/vars.yml
@@ -14,9 +14,9 @@ ddns_domain: "{{ vault_ddns_domain }}"
 ssh_port: "{{ vault_ssh_port }}"
 container_data: "/srv/containers"
 postgres_service_name: postgresql-13.service
-smtp_host: "{{ vault_smtp_host }}"
-smtp_pass: "{{ vault_smtp_pass }}"
-smtp_port: "{{ vault_smtp_port }}"
-smtp_user: "{{ vault_smtp_user }}"
+smtp_host: "{{ smtp_config[domain].host }}"
+smtp_pass: "{{ smtp_config[domain].pass }}"
+smtp_port: "{{ smtp_config[domain].port }}"
+smtp_user: "{{ smtp_config[domain].user }}"
 web_root: "/var/www"
 pip_wheel_dir: "{{ web_root }}/pip"
