--- a/roles/node_exporter/tasks/install.yml
+++ b/roles/node_exporter/tasks/install.yml
@@ -21,9 +21,7 @@
 
   - name: restart systemd-sysusers
     become: true
-    systemd:
-      name: systemd-sysusers.service
-      state: restarted
+    command: systemd-sysusers
     when: __sysusers.changed
 
   when:
