--- a/host_vars/ovh-gw01/vars.yml
+++ b/host_vars/ovh-gw01/vars.yml
@@ -1,15 +1,11 @@
 ---
 
+ansible_port: 2201
 
-domains: "{{ vault_domains }}"
 domain: "{{ domains | first  }}"
 ansible_host: "{{ vault_ansible_host }}"
 ansible_user: "{{ vault_ansible_user }}"
 ipv6_address: "{{ vault_ipv6_address }}"
 ipv6_gw: "{{ vault_ipv6_gw }}"
-gcp_project: "{{ vault_gcp_project }}"
-gcp_service_account_contents: "{{ vault_gcp_service_account_contents }}"
-domeneshop_token: "{{ vault_domeneshop_token }}"
-domeneshop_secret: "{{ vault_domeneshop_secret }}"
 
 ssh_authorized_keys: "{{ hostvars.drepi.ssh_authorized_keys }}"
