--- a/group_vars/webgw/certbot.yml
+++ b/group_vars/webgw/certbot.yml
@@ -1,22 +1,20 @@
 ---
 
 certbot_email: "{{ vault_certbot_email }}"
-certbot_extra_pkgs: ["certbot-dns-domeneshop"]
+certbot_extra_pkgs: ["certbot-dns-hetzner"]
 certbot_domains:
   - "{{ domains[0] }},*.{{ domains[0] }}"
   - "{{ domains[1] }},*.{{ domains[1] }}"
   - "{{ domains[2] }},*.{{ domains[2] }}"
   - "{{ domains[3] }},*.{{ domains[3] }}"
-certbot_credentials_path: "/etc/letsencrypt/ds.ini"
+certbot_credentials_path: "/etc/letsencrypt/hetzner.ini"
 certbot_credentials_content: |
-  dns_domeneshop_client_token={{ domeneshop_token }}
-  dns_domeneshop_client_secret={{ domeneshop_secret }}
+  dns_hetzner_api_token = {{ vault_dns_hetzner_api_token }}
 
 certbot_generate_command: >
   certbot certonly
-  --authenticator dns-domeneshop
-  --dns-domeneshop-credentials {{ certbot_credentials_path }}
-  --dns-domeneshop-propagation-seconds 120
+  --authenticator dns-hetzner
+  --dns-hetzner-credentials {{ certbot_credentials_path }}
   -n
   --keep
   --expand
