--- a/roles/chezmoi/tasks/main.yml
+++ b/roles/chezmoi/tasks/main.yml
@@ -16,6 +16,15 @@
   when: ansible_os_family != 'Debian'
   tags: "install"
 
+- name: Ensure overrides dir exists
+  file:
+    path: "{{ chezmoi_user_override }}"
+    state: directory
+    owner: "{{ chezmoi_user }}"
+    group: "{{ chezmoi_user }}"
+    mode: 0644
+  when: chezmoi_overrides | length > 0
+
 - name: Copy overrides
   copy:
     content: "{{ item.value }}"
