Variable for pam config file in gnome-keyring

--- a/playbooks/laptop.yml
+++ b/playbooks/laptop.yml
@@ -153,6 +153,8 @@
     #   tags: ["xsession"]
 
     - role: gnome-keyring
+      # vars:
+      #   pam_config: "/etc/pam.d/greetd"
       tags: ["gnome-keyring"]
 
     # - role: thinkfan
