Allow VM subnet to connect to PSQL

--- a/group_vars/pg/config.yml
+++ b/group_vars/pg/config.yml
@@ -4,7 +4,4 @@
 postgresql_hba_entries:
   - { type: local, database: all, user: postgres, auth_method: peer }
   - { type: host, database: all, user: all, address: "{{ hostvars.dresrv.ansible_host }}/32", auth_method: "md5" }
-  # Desktop VM VLAN
-  - { type: host, database: all, user: all, address: "{{ home_net.vm.cidr | ipaddr('4') | ipaddr('address') }}/32", auth_method: "md5" }
-  # dresrv VM VLAN
-  - { type: host, database: all, user: all, address: "{{ home_net.vm.cidr | ipaddr('7') | ipaddr('address') }}/32", auth_method: "md5" }
+  - { type: host, database: all, user: all, address: "{{ home_net.vm.cidr }}", auth_method: "md5" }
