--- a/group_vars/prom/grafana.yml
+++ b/group_vars/prom/grafana.yml
@@ -1,11 +1,19 @@
 ---
+
 grafana_admin_pass: "{{ vault_grafana_admin_pass }}"
 grafana_admin_user: "{{ vault_grafana_admin_user }}"
 grafana_psql_pass: "{{ vault_grafana_psql_pass }}"
-grafana_domain: "www.{{ domain }}"
-grafana_url: "https://www.{{ domain }}/grafana/"
+grafana_domain: "www.{{ hostvars['dresrv'].domain }}"
+grafana_url: "https://www.{{ hostvars['dresrv'].domain }}/grafana/"
 grafana_instance: "localhost"
-grafana_address: "127.0.0.1"
+grafana_address: "0.0.0.0"
+grafana_port: 3000
+
+smtp_host: "{{ smtp_config[hostvars['dresrv'].domain].host }}"
+smtp_pass: "{{ smtp_config[hostvars['dresrv'].domain].pass }}"
+smtp_port: "{{ smtp_config[hostvars['dresrv'].domain].port }}"
+smtp_user: "{{ smtp_config[hostvars['dresrv'].domain].user }}"
+
 grafana_security:
   admin_user: "{{ grafana_admin_user }}"
   admin_password: "{{ grafana_admin_pass }}"
@@ -13,7 +21,7 @@ grafana_smtp:
   host: "{{ smtp_host }}:{{ smtp_port }}"
   user: "{{ smtp_user }}"
   password: "{{ smtp_pass }}"
-  from_address: "grafana@{{ domain }}"
+  from_address: "grafana@{{ hostvars['dresrv'].domain }}"
 grafana_database:
   type: postgres
   host: "{{ hostvars['pg01'].ansible_host }}:5432"
