--- a/host_vars/drepi/ufw.yml
+++ b/host_vars/drepi/ufw.yml
@@ -13,3 +13,5 @@ ufw_local_rules:
     - { port: "2049", proto: "tcp" }   # NFS client
     - { port: "{{ node_exporter_port }}", proto: "tcp", src: "{{ home_net.general.cidr }}" }  # node - general
     - { port: "{{ dht_exporter_port }}", proto: "tcp", src: "{{ home_net.general.cidr }}" }   # dht - general
+    - { port: "{{ node_exporter_port }}", proto: "tcp", src: "{{ hostvars['prom01'].ansible_host }}" }  # node - general
+    - { port: "{{ dht_exporter_port }}", proto: "tcp", src: "{{ hostvars['prom01'].ansible_host }}" }   # dht - general
