Add node_exporter to pg01

--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -61,6 +61,10 @@ prometheus_scrape_configs:
         labels:
           instance: "{{ desktop_label }}"
 
+      - targets: ["{{ hostvars['pg01'].ansible_host }}:{{ hostvars['pg01'].node_exporter_port }}"]
+        labels:
+          instance: "{{ hostvars['pg01'].inventory_hostname }}"
+
       - targets: ["{{ hostvars['drepi'].ansible_host }}:{{ hostvars['drepi'].node_exporter_port }}"]
         labels:
           instance: "{{ drepi_label }}"
